apps/oxlint/src/snapshots/_fixtures__linter__debugger.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: fixtures/linter/debugger.js
working directory: 
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[fixtures/linter/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Delete this code.

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 97 rules using 1 threads.
