apps/oxlint/src/snapshots/_fixtures__linter__js_and_jsx.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: fixtures/linter/js_and_jsx.js
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 101 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
