apps/oxlint/src/snapshots/_fixtures__linter__js_as_jsx.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: fixtures/linter/js_as_jsx.js
working directory: 
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[fixtures/linter/js_as_jsx.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | <div /> // Should `.js` file pass as `.jsx`.
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintSucceeded
----------
